--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -9,6 +9,7 @@ fr:
         remember_me: Se souvenir de moi
       ppsp:
         address: L'adresse
+        start_date: La date de début
         end_date: La date de fin
         workforce: Le personnel impliqué
         nature: La nature du travail
@@ -98,63 +99,65 @@ fr:
       messages:
         record_invalid: 'La validation a échoué : %{errors}'
         restrict_dependent_destroy:
-          has_one: Vous ne pouvez pas supprimer l’enregistrement car un(e) %{record}
+          has_one:
+            Vous ne pouvez pas supprimer l’enregistrement car un(e) %{record}
             dépendant(e) existe
-          has_many: Vous ne pouvez pas supprimer l’enregistrement parce que les %{record}
+          has_many:
+            Vous ne pouvez pas supprimer l’enregistrement parce que les %{record}
             dépendants existent
   date:
     abbr_day_names:
-    - dim
-    - lun
-    - mar
-    - mer
-    - jeu
-    - ven
-    - sam
+      - dim
+      - lun
+      - mar
+      - mer
+      - jeu
+      - ven
+      - sam
     abbr_month_names:
-    - 
-    - jan.
-    - fév.
-    - mar.
-    - avr.
-    - mai
-    - juin
-    - juil.
-    - août
-    - sept.
-    - oct.
-    - nov.
-    - déc.
+      -
+      - jan.
+      - fév.
+      - mar.
+      - avr.
+      - mai
+      - juin
+      - juil.
+      - août
+      - sept.
+      - oct.
+      - nov.
+      - déc.
     day_names:
-    - dimanche
-    - lundi
-    - mardi
-    - mercredi
-    - jeudi
-    - vendredi
-    - samedi
+      - dimanche
+      - lundi
+      - mardi
+      - mercredi
+      - jeudi
+      - vendredi
+      - samedi
     formats:
-      default: "%d/%m/%Y"
-      long: "%e %B %Y"
-      short: "%e %b"
+      default: '%d/%m/%Y'
+      long: '%e %B %Y'
+      short: '%e %b'
     month_names:
-    - 
-    - janvier
-    - février
-    - mars
-    - avril
-    - mai
-    - juin
-    - juillet
-    - août
-    - septembre
-    - octobre
-    - novembre
-    - décembre
+      -
+      - janvier
+      - février
+      - mars
+      - avril
+      - mai
+      - juin
+      - juillet
+      - août
+      - septembre
+      - octobre
+      - novembre
+      - décembre
     order:
-    - :day
-    - :month
-    - :year
+      - :day
+      - :month
+      - :year
   datetime:
     distance_in_words:
       about_x_hours:
@@ -183,19 +186,19 @@ fr:
         other: plus de %{count} ans
       x_seconds:
         one: 1 seconde
-        other: "%{count} secondes"
+        other: '%{count} secondes'
       x_minutes:
         one: 1 minute
-        other: "%{count} minutes"
+        other: '%{count} minutes'
       x_days:
         one: 1 jour
-        other: "%{count} jours"
+        other: '%{count} jours'
       x_months:
         one: 1 mois
-        other: "%{count} mois"
+        other: '%{count} mois'
       x_years:
         one: 1 an
-        other: "%{count} ans"
+        other: '%{count} ans'
     prompts:
       second: Seconde
       minute: Minute
@@ -204,7 +207,7 @@ fr:
       month: Mois
       year: Année
   errors:
-    format: "%{attribute} %{message}"
+    format: '%{attribute} %{message}'
     messages:
       accepted: doit être accepté(e)
       blank: doit être rempli(e)
@@ -251,22 +254,22 @@ fr:
   number:
     currency:
       format:
-        delimiter: " "
-        format: "%n %u"
+        delimiter: ' '
+        format: '%n %u'
         precision: 2
-        separator: ","
+        separator: ','
         significant: false
         strip_insignificant_zeros: false
-        unit: "€"
+        unit: '€'
     format:
-      delimiter: " "
+      delimiter: ' '
       precision: 3
-      separator: ","
+      separator: ','
       significant: false
       strip_insignificant_zeros: false
     human:
       decimal_units:
-        format: "%n %u"
+        format: '%n %u'
         units:
           billion: milliard
           million: million
@@ -280,7 +283,7 @@ fr:
         significant: true
         strip_insignificant_zeros: true
       storage_units:
-        format: "%n %u"
+        format: '%n %u'
         units:
           byte:
             one: octet
@@ -294,21 +297,21 @@ fr:
     percentage:
       format:
         delimiter: ''
-        format: "%n %"
+        format: '%n %'
     precision:
       format:
         delimiter: ''
   support:
     array:
-      last_word_connector: " et "
-      two_words_connector: " et "
-      words_connector: ", "
+      last_word_connector: ' et '
+      two_words_connector: ' et '
+      words_connector: ', '
   time:
     am: am
     formats:
-      default: "%d %B %Y %Hh %Mmin %Ss"
-      long: "%A %d %B %Y %Hh%M"
-      short: "%d %b %Hh%M"
+      default: '%d %B %Y %Hh %Mmin %Ss'
+      long: '%A %d %B %Y %Hh%M'
+      short: '%d %b %Hh%M'
     pm: pm
   devise:
     confirmations:
@@ -322,7 +325,7 @@ fr:
       reset_password_instructions:
         action: Changer mon mot de passe
         greeting: Bonjour %{recipient}!
-        instruction: 'Quelqu''un a demandé un lien pour changer votre mot de passe, le voici :'
+        instruction: "Quelqu'un a demandé un lien pour changer votre mot de passe, le voici :"
         instruction_2: Si vous n'avez pas émis cette demande, merci d'ignorer cet email.
         instruction_3: Votre mot de passe ne changera pas tant que vous n'aurez pas cliqué sur ce lien et renseigné un nouveau mot de passe.
       unlock_instructions:
@@ -341,11 +344,11 @@ fr:
         send_me_reset_password_instructions: Envoyez-moi des instructions pour réinitialiser mon mot de passe
     registrations:
       edit:
-        are_you_sure: "Êtes-vous sûr ?"
+        are_you_sure: 'Êtes-vous sûr ?'
         cancel_my_account: Supprimer mon compte
         currently_waiting_confirmation_for_email: 'Confirmation en attente pour: %{email}'
         leave_blank_if_you_don_t_want_to_change_it: laissez ce champ vide pour le laisser inchangé
-        title: "Éditer %{resource}"
+        title: 'Éditer %{resource}'
         unhappy: 'Pas content '
         update: Modifier
         we_need_your_current_password_to_confirm_your_changes: nous avons besoin de votre mot de passe actuel pour valider ces modifications
