--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -313,59 +313,89 @@ fr:
       long: '%A %d %B %Y %Hh%M'
       short: '%d %b %Hh%M'
     pm: pm
+  errors:
+    messages:
+      not_found: "n'a pas été trouvé(e)"
+      already_confirmed: "a déjà été confirmé(e)"
+      not_locked: "n'était pas verrouillé(e)"
   devise:
+    failure:
+      unauthenticated: "Vous devez vous connecter ou vous inscrire pour continuer."
+      unconfirmed: "Vous devez confirmer votre compte pour continuer."
+      locked: "Votre compte est verrouillé."
+      invalid: "Courriel ou mot de passe incorrect."
+      invalid_token: "Jeton d'authentification incorrect."
+      timeout: "Votre séance est expirée, veuillez vous reconnecter pour continuer."
+      inactive: "Votre compte n'est pas encore activé."
+    sessions:
+      signed_in: "Réussite de la connexion."
+      signed_out: "Réussite de la deconnexion."
+    passwords:
+      send_instructions: "Vous allez recevoir un courriel avec des instructions pour changer votre mot de passe."
+      updated: "Votre mot de passe a été changé. Vous êtes maintenant connecté."
+    confirmations:
+      send_instructions: "Vous allez recevoir un courriel avec des instructions pour confirmer votre compte."
+      confirmed: "Votre compte a été confirmé. Vous êtes maintenant connecté."
+    registrations:
+      signed_up: "Votre inscription est enregistrée. Si elle est activé, un courriel de confirmation vous a été envoyé."
+      updated: "Votre mise à jour a été prise en compte."
+      destroyed: "Bye! Votre compte est annulé. Nous souhaitons vous revoir bientôt."
+    unlocks:
+      send_instructions: "Vous allez recevoir un courriel avec des instructions pour déverrouiller votre compte."
+      unlocked: "Votre compte est déverrouillé. Vous êtes maintenant connecté."
+    mailer:
+      confirmation_instructions: "Instructions de confirmation"
+      reset_password_instructions: "Instructions pour changer le mot de passe"
+      unlock_instructions: "Instructions pour déverrouiller le compte"
+    common:
+      forgot_your_password?: "Mot de passe oublié?"
+      hello: "Bonjour"
+      sign_in: "Se connecter"
+      sign_up: "Se déconnecter"       
+    shared:
+      links:    
+        didnt_receive_confirmation_instructions?: "Vous n'avez pas reçu de courriel de confirmation?"
+        didnt_receive_unlock_instructions?: "Vous n'avez pas reçu de courriel de déverrouillage de votre compte?"
     confirmations:
       new:
-        resend_confirmation_instructions: Renvoyer les instructions de confirmation
+        resend_confirmation_instructions: "Renvoyer le courriel de confirmation"
     mailer:
       confirmation_instructions:
-        action: Confirmer mon email
-        greeting: Bienvenue %{recipient}!
-        instruction: 'Vous pouvez confirmer votre email grâce au lien ci-dessous:'
+        welcome: "Bienvenu(e)"
+        you_can_confirm_your_account_through_the_link_below: "Vous pouvez confirmer votre compte via le lien ci-dessous"
+        confirm_my_account: "Confirmer mon compte"
       reset_password_instructions:
-        action: Changer mon mot de passe
-        greeting: Bonjour %{recipient}!
-        instruction: "Quelqu'un a demandé un lien pour changer votre mot de passe, le voici :"
-        instruction_2: Si vous n'avez pas émis cette demande, merci d'ignorer cet email.
-        instruction_3: Votre mot de passe ne changera pas tant que vous n'aurez pas cliqué sur ce lien et renseigné un nouveau mot de passe.
+        # For "Someone has requested a link to change your password, and you can do this through the link below."
+        reset_password_instruction: "Quelqu'un a demandé un lien pour changer votre mot de passe. Vous pouvez le faire via le lien ci-dessous."
+        change_my_password: "Changer mon mot de passe"
+        # For "If you didn't request this, please ignore this email."
+        wrong_request_instruction: "Si vous n'avez pas demandé ce changement, ignorez ce message."
+        # For "Your password won't change until you access the link above and create a new one."
+        unchange_password_message: "Votre mot de passe ne sera pas changé tant vous n'aurez pas accédé au lien ci-dessus pour en créer un nouveau."
       unlock_instructions:
-        action: Débloquer mon compte
-        greeting: Bonjour %{recipient}!
-        instruction: 'Suivez ce lien pour débloquer votre compte:'
-        message: Votre compte a été bloqué suite à un nombre d'essais de connexions manquées trop important
+        # For "Your account has been locked due to an excessive amount of unsuccessful sign in attempts."
+        locked_account_message: "Votre compte est verrouillé car vous avez échoué lors de votre identification trop de fois."
+        # For "Click the link below to unlock your account"
+        unlock_account_instruction: "Cliquez sur le lien ci-dessous pour déverrouiller votre compte"
+        unlock_my_account: "Déverrouiller mon compte"
     passwords:
-      edit:
-        change_my_password: Changer mon mot de passe
-        change_your_password: Changer votre mot de passe
-        confirm_new_password: Confirmez votre nouveau mot de passe
-        new_password: Nouveau mot de passe
+      edit: 
+        change_your_password: "Changez votre mot de passe"
+        change_my_password: "Changer mon mot de passe"
       new:
-        forgot_your_password: Mot de passe oublié ?
-        send_me_reset_password_instructions: Envoyez-moi des instructions pour réinitialiser mon mot de passe
+        send_me_reset_password_instructions: "Envoyez-moi un courriel pour changer mon mot de passe"
     registrations:
       edit:
-        are_you_sure: 'Êtes-vous sûr ?'
-        cancel_my_account: Supprimer mon compte
-        currently_waiting_confirmation_for_email: 'Confirmation en attente pour: %{email}'
-        leave_blank_if_you_don_t_want_to_change_it: laissez ce champ vide pour le laisser inchangé
-        title: 'Éditer %{resource}'
-        unhappy: 'Pas content '
-        update: Modifier
-        we_need_your_current_password_to_confirm_your_changes: nous avons besoin de votre mot de passe actuel pour valider ces modifications
-      new:
-        sign_up: Inscription
-    sessions:
-      new:
-        sign_in: Connexion
-    shared:
-      links:
-        back: Retour
-        didn_t_receive_confirmation_instructions: Vous n'avez pas reçu le email de confirmation ?
-        didn_t_receive_unlock_instructions: Vous n'avez pas reçu le email de déblocage ?
-        forgot_your_password: Mot de passe oublié ?
-        sign_in: Connexion
-        sign_in_with_provider: Connexion avec %{provider}
-        sign_up: Inscription
+        edit: "Modifier"
+        # For "leave blank if you don't want to change it"
+        password_instruction: "Ne pas remplir si vous ne voulez pas le changer"
+        # For "we need your current password to confirm your changes"
+        current_password_instruction: "Vous devez remplir votre mot de passe en cours pour confirmer vos changement"                
+        update: "Mettre à jour"
+        cancel_my_account: "Annuler mon compte"
+        unhappy?: "Pas content(e)?"
+        are_you_sure?: "Êtes-vous sûr?"
+        back: "Retour"
     unlocks:
       new:
-        resend_unlock_instructions: Renvoyer les instructions de déblocage
+        resend_unlock_instructions: "Renvoyez le mail pour déverrouiller mon compte" 
